--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2024"
 
 [dependencies]
 clap = { version = "4.5.53", features = ["derive"] }
+colored = "3.0.0"
 daggy = "0.9.0"
 dirs = "6.0.0"
 ratatui = "0.29.0"
