--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ dirs = "6.0.0"
 ratatui = "0.29.0"
 serde = { version = "1.0.228", features = ["derive"] }
 toml = "0.9.8"
+unicode-width = "0.1.11"
