--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,11 +16,11 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - target: x86_64-unknown-linux-gnu
+          - target: x86_64-unknown-linux-musl
             os: ubuntu-latest
             suffix: linux-amd64
             use_cross: false
-          - target: aarch64-unknown-linux-gnu
+          - target: aarch64-unknown-linux-musl
             os: ubuntu-latest
             suffix: linux-aarch64
             use_cross: true
@@ -42,9 +42,15 @@ jobs:
         with:
           target: ${{ matrix.target }}
 
+      - name: Install musl tools (Linux)
+        if: contains(matrix.target, 'linux-musl') && !matrix.use_cross
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y musl-tools
+
       - name: Install Cross
         if: matrix.use_cross
-        run: cargo install cross
+        run: cargo install cross --git https://github.com/cross-rs/cross
 
       - name: Build Release Binary
         run: |
@@ -59,8 +65,17 @@ jobs:
           mkdir -p release
           cp target/${{ matrix.target }}/release/env-manage release/env-manage-${{ matrix.suffix }}
 
+      - name: Create tarball
+        run: |
+          cd release
+          tar -czf env-manage-${{ matrix.suffix }}.tar.gz env-manage-${{ matrix.suffix }}
+          sha256sum env-manage-${{ matrix.suffix }}.tar.gz > env-manage-${{ matrix.suffix }}.tar.gz.sha256
+
       - name: Upload Release Asset
         uses: softprops/action-gh-release@v2
         with:
-          files: release/env-manage-${{ matrix.suffix }}
+          files: |
+            release/env-manage-${{ matrix.suffix }}
+            release/env-manage-${{ matrix.suffix }}.tar.gz
+            release/env-manage-${{ matrix.suffix }}.tar.gz.sha256
           generate_release_notes: true
