feat: enhance shell initialization and validation with expanded TUI functionality
  - Add shell-specific initialization support with `init <shell>` command
  - Implement profile name and variable key validation across CLI and TUI
  - Add shell type detection and POSIX template for proper environment setup
  - Introduce expand/collapse functionality in TUI for variable display
  - Refactor init command to support multiple shell types (bash, zsh, fish)
  - Add variable validation in profile creation, renaming and editing flows
  - Implement warning messages for invalid profile/variable names
  - Enhance TUI with expand view mode showing resolved environment variables
  - Add Tab key support to toggle between raw and expanded variable views
  - Prevent deletion and renaming of GLOBAL profile in TUI
  - Update shell marker constant to be more specific
  - Add global Init command to initialize shell environment
  - Include template file for POSIX shell wrapper generation

  This commit significantly improves the shell integration capabilities and adds comprehensive validation to prevent invalid profile names and variable keys.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,7 @@
 name = "env-manage"
 version = "0.1.0"
 edition = "2024"
+default-run = "env-manage"
 
 [dependencies]
 clap = { version = "4.5.53", features = ["derive"] }
@@ -12,3 +13,7 @@ ratatui = "0.29.0"
 serde = { version = "1.0.228", features = ["derive"] }
 toml = "0.9.8"
 unicode-width = "0.1.11"
+
+[[bin]]
+name = "env-manage"
+path = "src/main.rs"
